Bug 33612 - DBus proxies leaked in the ACL plugin
Summary: DBus proxies leaked in the ACL plugin
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: mission-control (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Marco Barisione
QA Contact: Telepathy bugs list
URL: http://git.collabora.co.uk/?p=user/ba...
Whiteboard: review+
Keywords: patch
Depends on:
Blocks:
 
Reported: 2011-01-27 11:06 UTC by Marco Barisione
Modified: 2011-01-28 07:16 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Marco Barisione 2011-01-27 11:06:25 UTC
The DBus proxy used in caller_async_authorised in plugins/mcp-dbus-aegis-acl.c is leaked.
Comment 2 Vivek Dasmohapatra 2011-01-27 11:25:23 UTC
That does indeed look like a small but very frequent leak.
Pass the brown paper bag...
Comment 3 Marco Barisione 2011-01-28 07:16:07 UTC
Thanks. Pushed to master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.