Aegis plugin: fix a leak of DBus proxies

Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=33612>